# agile-clinic-portal

./: .gitignore  pyproject.toml
.claude/: launch.json
.github/workflows/: ci.yml
scripts/: seed_db.py
src/agile_ci_demo/: app.py
static/css/: app.css  createDoctor.css  listDoctor.css  staff_create.css  staff_list.css  staff_view.css
static/js/: appointment-form.js  auth-login.js  consultation-note-form.js  doctor-schedule.js  doctor-start-consultation.js  doctor_create.js  doctor_list.js  medical_history.js  patient-appointments.js  patient-dashboard.js  patient-form.js  patient_detail.js  patients.js  patients_list.js  prescription-history.js  receptionist-view-doctor-schedule.js  record_detail.js  role-view.js  staff-form.js  staff_create.js  staff_list.js  staff_view.js  viewDoctor.js
templates/: base.html
templates/appointments/: create.html  doctor_startConsultation.html  doctor_viewSchedule.html  patient_appointment.html  patient_bookAppointment.html  receptionist_createAppointment.html  receptionist_viewDoctorSchedule.html  schedule.html
templates/auth/: login.html
templates/patients/: detail.html  list.html  patient_dashboard.html  patients_details.html  receptionist_registerPatients.html  register.html
templates/records/: detail.html  new.html
templates/staff/: create.html  createStaff.html  list.html  staff_create.html  staff_list.html  staff_view.html
tests/: conftest.py  test_app.py  test_appointments.py  test_auth.py  test_patients.py  test_prescription.py  test_records.py  test_staff.py
tests/features/: appointments.feature  (+2 more)
(+42 files in other folders)
